update: PolicyのAllowedMethodsをMethodsに名称変更.
