# internal/app/api/interface/request/policy.go
@@ -1,15 +1,15 @@
 package request
 
 type CreatePolicyRequest struct {
-	Name           string   `json:"name"`
-	Service        string   `json:"service"`
-	Path           string   `json:"path"`
-	AllowedMethods []string `json:"allowed_methods"`
+	Name    string   `json:"name"`
+	Service string   `json:"service"`
+	Path    string   `json:"path"`
+	Methods []string `json:"methods"`
 }
 
 type UpdatePolicyRequest struct {
-	Name           string   `json:"name"`
-	Service        string   `json:"service"`
-	Path           string   `json:"path"`
-	AllowedMethods []string `json:"allowed_methods"`
+	Name    string   `json:"name"`
+	Service string   `json:"service"`
+	Path    string   `json:"path"`
+	Methods []string `json:"methods"`
 }
