# internal/app/api/usecase/dto/policy.go
@@ -7,25 +7,25 @@ import (
 )
 
 type PolicyDTO struct {
-	ID             uuid.UUID
-	UserID         uuid.UUID
-	Name           string
-	Service        string
-	Path           string
-	AllowedMethods []string
-	CreatedAt      time.Time
-	UpdatedAt      time.Time
+	ID        uuid.UUID
+	UserID    uuid.UUID
+	Name      string
+	Service   string
+	Path      string
+	Methods   []string
+	CreatedAt time.Time
+	UpdatedAt time.Time
 }
 
-func NewPolicyDTO(id uuid.UUID, userID uuid.UUID, name string, service string, path string, allowedMethods []string, createdAt time.Time, updatedAt time.Time) *PolicyDTO {
+func NewPolicyDTO(id uuid.UUID, userID uuid.UUID, name string, service string, path string, methods []string, createdAt time.Time, updatedAt time.Time) *PolicyDTO {
 	return &PolicyDTO{
-		ID:             id,
-		UserID:         userID,
-		Name:           name,
-		Service:        service,
-		Path:           path,
-		AllowedMethods: allowedMethods,
-		CreatedAt:      createdAt,
-		UpdatedAt:      updatedAt,
+		ID:        id,
+		UserID:    userID,
+		Name:      name,
+		Service:   service,
+		Path:      path,
+		Methods:   methods,
+		CreatedAt: createdAt,
+		UpdatedAt: updatedAt,
 	}
 }
